--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "jellyfindiscord",
   "version": "1.0.0",
   "type": "module",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon",
-    "start": "node build/index.js",
-    "build": "tsc -p ."
+    "dev": "nodemon --watch src --exec \"node --loader ts-node/esm src/index.ts\"",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "ws": "^8.14.2",
     "yaml": "^2.4.0",
-    "discord-rich-presence": "^0.0.8"
+    "discord-rpc": "^4.0.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
